feat/Modified api design
